kubernetes/apps/tiny/capacitor-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-capacitor.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: capacitor-tls
